# Pathfinding-analysis-engine-with-Heuristic-Visualization

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  SETUP_GITHUB.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/agents/: algorithm.agent.md  build.agent.md  core.agent.md  heuristic.agent.md  performance.agent.md  qa.agent.md  visualization.agent.md
.github/instructions/: algorithms.instructions.md  cpp-style.instructions.md  heuristics.instructions.md  performance.instructions.md  testing.instructions.md  visualization.instructions.md
.github/mcp/: pae_mcp.py
.github/prompts/: add-algorithm.prompt.md  add-heuristic.prompt.md  benchmark.prompt.md  code-review.prompt.md  fix-bug.prompt.md  git-release.prompt.md  hotfix.prompt.md  implement-feature.prompt.md  multi-bug-fix.prompt.md  parallel-checks.prompt.md  refactor.prompt.md  run-checks.prompt.md  setup-new-collaborator.prompt.md  ship-feature.prompt.md  ship-fix.prompt.md  write-tests.prompt.md
.github/workflows/: auto-ticket.yml  ci.yml  release.yml  validate.yml
design/: README.md  architecture.mmd  class_diagram.mmd  diagrams.md  sequence_benchmark.mmd  sequence_run.mmd
docs/: ALGORITHMS.md  ARCHITECTURE.md  BUGS.md  CHANGELOG.md  DATA_STRUCTURES.md  EXTENSIONS.md  FEATURES.md  FOLDER_STRUCTURE.md  HEURISTICS.md  IMPLEMENTATION_PLAN.md  LLD.md  PERFORMANCE.md  REQUIREMENTS.md  ROADMAP.md  TESTING.md  TUTORIAL.md
pae/: CMakeLists.txt  CMakePresets.json
pae/benchmarks/: CMakeLists.txt  bench_pathfinders.cpp
pae/include/pae/algorithms/: AStar.hpp  BFS.hpp  Dijkstra.hpp  IPathfinder.hpp  Result.hpp  RunConfig.hpp
pae/include/pae/cli/: App.hpp  AppConfig.hpp
pae/include/pae/core/: Cell.hpp  Coord.hpp  Grid.hpp  Node.hpp  Span.hpp
pae/include/pae/factory/: Registry.hpp
pae/include/pae/heuristics/: Chebyshev.hpp  Euclidean.hpp  IHeuristic.hpp  Manhattan.hpp  Octile.hpp
pae/include/pae/io/: Errors.hpp  GridLoader.hpp
pae/include/pae/metrics/: Benchmark.hpp  Metrics.hpp  Report.hpp  Rss.hpp
pae/include/pae/visualization/: CliVisualizer.hpp  IVisualizer.hpp  NullVisualizer.hpp  VizMode.hpp
pae/maps/: corridor.txt  maze_20x20.txt  maze_50x50.txt  no_path.txt  open_arena_20x20.txt  open_arena_50x50.txt  tiny.txt  weighted_small.txt
pae/scripts/: bump-version.sh  format.sh  gen_maze.py  perf_diff.py  render_dashboard.py  run-benchmarks.sh  run-checks.sh
pae/src/algorithms/: AStar.cpp  BFS.cpp  CMakeLists.txt  Dijkstra.cpp
pae/src/algorithms/internal/: Reconstruct.cpp  Reconstruct.hpp
pae/src/benchmark/: Benchmark.cpp  CMakeLists.txt  Report.cpp
pae/src/cli/: App.cpp  AppConfig.cpp  CMakeLists.txt  main.cpp
pae/src/core/: CMakeLists.txt  Grid.cpp
pae/src/factory/: CMakeLists.txt  register_default.cpp
pae/src/heuristics/: CMakeLists.txt  Chebyshev.cpp  Euclidean.cpp  Manhattan.cpp  Octile.cpp
pae/src/io/: CMakeLists.txt  GridLoader.cpp
pae/src/metrics/: CMakeLists.txt  Report.cpp  Rss.cpp
pae/src/visualization/: CMakeLists.txt  CliVisualizer.cpp
pae/tests/: CMakeLists.txt  test_astar.cpp  test_bfs.cpp  test_charts.cpp  test_chebyshev.cpp  test_cli.cpp  test_cross_algorithm.cpp  test_dijkstra.cpp  test_euclidean.cpp  test_grid.cpp  test_grid_loader.cpp  test_manhattan.cpp  test_octile.cpp  test_perf_budget.cpp  test_registry.cpp  test_smoke.cpp  test_visualizer.cpp
pae/tests/helpers/: ZeroHeuristic.hpp
